@@ -1,12 +1,12 @@
 [comment {-*- tcl -*- doctools manpage}]
-[manpage_begin doctools::nroff::man.macros n 0.1]
+[manpage_begin doctools::nroff::man_macros n 0.1]
 [copyright {2009 Andreas Kupries <andreas_kupries@users.sourceforge.net>}]
 [moddesc   {Documentation tools}]
 [titledesc {Default CSS style for NROFF export plugins}]
 [category  {Documentation tools}]
 [require Tcl 8.4]
-[require doctools::nroff::man.macros [opt 0.1]]
-[keywords doctools export plugin nroff man.macros macros]
+[require doctools::nroff::man_macros [opt 0.1]]
+[keywords doctools export plugin nroff man_macros macros]
 [description]
 
 This package provides a single command providing access to the
@@ -23,7 +23,7 @@ formats, most notably [term nroff].
 
 [list_begin definitions]
 
-[call [cmd ::doctools::nroff::man.macros::contents]]
+[call [cmd ::doctools::nroff::man_macros::contents]]
 
 This command returns the text of the default CSS style to use for NROFF
 generated by the various NROFF export plugins.
