@@ -4,7 +4,7 @@
 # Copyright (c) 2009 by Andreas Kupries <andreas_kupries@users.sourceforge.net>
 # All rights reserved.
 #
-# RCS: @(#) $Id: common,v 1.2 2009/04/17 05:41:24 andreas_kupries Exp $
+# RCS: @(#) $Id: common,v 1.3 2009/04/29 02:09:46 andreas_kupries Exp $
 
 # -------------------------------------------------------------------------
 
@@ -97,7 +97,7 @@ proc striphtmlcomments {text {n {}}} {
 }
 
 proc stripmanmacros {text} {
-    return [string map [list \n[doctools::nroff::man.macros::contents] {}] $text]
+    return [string map [list \n[doctools::nroff::man_macros::contents] {}] $text]
 }
 
 proc stripnroffcomments {text {n {}}} {
